# fadtk

./: pyproject.toml  setup.py
fadtk/: fad_versa.py  kid.py  model_loader.py  utils.py
