[tool.poetry]
name = "fadtk"
version = "1.0.0"
description = "A simple and standardized library for Frechet Audio Distance calculation (Adapated from Microsoft/fadtk)."
authors = ["Azalea <me@hydev.org>"]
readme = "README.md"
homepage = "https://github.com/ftshijt/fadtk"
repository = "https://github.com/ftshijt/fadtk"

[tool.poetry.dependencies]
encodec = "^0.1.1"
laion-clap = "^1.1.6"
nnaudio = "^0.3.2"
msclap = "^1.3.3"
# Resampy is a dependency of vggish, which is dynamically loaded from torch hub
resampy = "*"

[tool.poetry.scripts]
fadtk = "fadtk.__main__:main"
fadtk-embeds = "fadtk.embeds.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
